wayne: Show 4G instead of LTE to maximise icon space
Change-Id: I2a6f61c2b5cb52bb51ed4a6686550a32957923da
Signed-off-by: PIPIPIG233666 <2212848813@qq.com>
Signed-off-by: TH779 <tongsj2333@gmail.com>

--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -72,4 +72,7 @@
     <!-- Max visible notification icons -->
     <integer name="config_maxVisibleNotificationIcons">7</integer>
     <integer name="config_maxVisibleNotificationIconsWhenDark">8</integer>
+
+    <!-- Should "4G" be shown instead of "LTE" when the network is NETWORK_TYPE_LTE? -->
+    <bool name="config_show4GForLTE">true</bool>
 </resources>
